links, images, buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <li><span style="font-size: 30px;">bigger text</span></li>
 </ul>
 
+<p style="color: #a4deab;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione veniam est facilis eius vero. Ex unde veritatis provident maxime quibusdam iure, animi deleniti? Nisi tenetur rerum, quod corrupti deserunt ex.</p>
+
+<p class="latin-text">Lorem, ipsum dolor.</p>
 <!--Forms-->
 
 <h1>Types of forms</h1>
@@ -68,5 +71,16 @@ Form with a list:
     </table>
 </p>
 
+<a href="./img/frame.jpg">Download the door frame from Friends TV show</a><br>
+<img src="./img/frame.jpg" alt="The door frame" width="100" height="100">
+
+<button type="button">Hit me</button>
+
+<footer>
+<address>
+<a href="mailto:viv_93@mail.ru">viv_93@mail.ru</a>
+<a href="tel:+380992418401">+38-099-241-84-01</a>
+</address>
+</footer>
 </body>
 </html>
