--- a/index.html
+++ b/index.html
@@ -2,47 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="Some html tips and tricks for a beginer">
     <title>html test</title>
+    <!--embedded stylesheet / вбудована таблиця стилів -->
+        <style>
+address {
+    background-color: greenyellow;
+}
+        </style>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <!--The color of the background-->
 <body bgcolor="lavender">
 
+<header>
+    <nav>
+        <ul>
+            <li><a href="#text-types">Types of text</a></li>
+            <li><a href="#forms">Types of forms</a></li>
+            <li><a href="#links">Types of links</a></li>
+            <li><a href="#images">Types of images</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+
 <!--Types of text-->
 
-    <h1>Types of text</h1>
+    <h1 id="text-types">Types of text and lists</h1>
 <ul>
     <li><b>bold</b></li>
     <li><i>italic</i></li>
     <li><u>underlined</u></li>
     <li><strong>strong</strong></li>
     <li><strike>strike</strike></li>
-    <li><span style="color: red;">colored text</span></li>
+    <li><span style="color: red;">colored text (inline style)</span></li>
     <li><span style="background: white;">text with colored bg</span></li>
     <li><span style="font-size: 30px;">bigger text</span></li>
     <li>I markes <mark>this text</mark></li>
 </ul>
 
-<<<<<<< HEAD
+<ol>
+    <li>one</li>
+    <li>two</li>
+</ol>
+
 <p style="color: #a4deab;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione veniam est facilis eius vero. Ex unde veritatis provident maxime quibusdam iure, animi deleniti? Nisi tenetur rerum, quod corrupti deserunt ex.</p>
 
-<p class="latin-text">Lorem, ipsum dolor.</p>
+<p class="latin-text">Lorem, &lt;ipsum&gt; dolor.</p>
 
 <details>
     <summary>Pss... Do you want to know a secret?</summary>
     <p>
-        I am lonely
+        I'm in love with Maya
     </p>
 </details>
 
 <!--Forms-->
-
-<h1>Types of forms</h1>
+    <section>
+<h1 id="forms">Types of forms</h1>
 <form>
     <p>Form with a counter with a hint <input type="number" placeholder="count up or down"></p>
     <p>Form with a hint <input type="text" placeholder="type something"></p>
 </form>
+
 <form>
 Form with a list:
 <input list="tags" name="tag">
@@ -53,7 +78,8 @@ Form with a list:
 <option value="Ringo Starr">Ringo Starr</option>
 </datalist>
 </form>
-
+    </section>
+    <section>
 <p>Form with a list:
 <select name="Guitars">
 <option value="Washburn">Washburn</option>
@@ -63,6 +89,7 @@ Form with a list:
 <option value="Hofner">Hofner</option>
 <option value="Trembita">Trembita</option>
 </select></p>
+    </section>
 
 <h1>Tables</h1>
 
@@ -81,12 +108,21 @@ Form with a list:
     </table>
 </p>
 
-<a href="./img/frame.jpg">Download the door frame from Friends TV show</a><br>
-<img src="./img/frame.jpg" alt="The door frame" width="100" height="100">
+<h1 id="links">Links</h1>
+<a href="./img/frame.jpg" download="new jpg title">Download the door frame from Friends TV show</a><br>
+<p><a href="./img/frame.jpg" target="_blank">откроется в новой вкладке</a></p>
+<a href="./img/frame.jpg"><img src="./img/frame.jpg" alt="frame" /></a>
 
-<button type="button">Hit me</button>
+<h1 id="images">Images and buttons</h1>
+<img src="./img/frame.jpg" alt="The door frame" width="100" height="100" /><br>
 
+<button type="button">для интерактива</button><br>
+<button type="submit">для форм</Button><br>
+</main>
 <footer>
+    <p>Всі права захищені &copy; мнемокод</p>
+<p>Всі права захищені &#169;  десятковий код</p>
+<p>Всі права захищені &#xa9; шістнадцятковий код</p>
 <address>
 <a href="mailto:viv_93@mail.ru">viv_93@mail.ru</a>
 <a href="tel:+380992418401">+38-099-241-84-01</a>
