--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@ address {
 
 <p style="color: #a4deab;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione veniam est facilis eius vero. Ex unde veritatis provident maxime quibusdam iure, animi deleniti? Nisi tenetur rerum, quod corrupti deserunt ex.</p>
 
-<p class="latin-text">Lorem, &lt;ipsum&gt; dolor.</p>
+<p class="latin-text">Lorem, &lt;ipsum&gt; dolor.<br> 
+    <ul>
+        <li>three</li>
+        <li>four</li>
+    </ul>
+</p>
 
 <details>
     <summary>Pss... Do you want to know a secret?</summary>
@@ -118,13 +123,20 @@ Form with a list:
 
 <button type="button">для интерактива</button><br>
 <button type="submit">для форм</Button><br>
+
+<div class="example">
+    <h6 class="example-title">trololo</h6>
+    <ul>
+        <li>la la la</li>
+    </ul>
+</div>        
 </main>
 <footer>
     <p>Всі права захищені &copy; мнемокод</p>
 <p>Всі права захищені &#169;  десятковий код</p>
 <p>Всі права захищені &#xa9; шістнадцятковий код</p>
 <address>
-<a href="mailto:viv_93@mail.ru">viv_93@mail.ru</a>
+<a class="link" href="mailto:viv_93@mail.ru">viv_93@mail.ru</a>
 <a href="tel:+380992418401">+38-099-241-84-01</a>
 </address>
 </footer>
