--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="Some html tips and tricks for a beginer">
     <title>html test</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <!--embedded stylesheet / вбудована таблиця стилів -->
         <style>
 address {
@@ -25,6 +26,10 @@ address {
             <li><a href="#images">Types of images</a></li>
         </ul>
     </nav>
+
+    <p class="hi">Hello World</p>
+
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, praesentium earum? Reprehenderit molestias totam recusandae inventore similique nam ad unde fuga consequatur, ab ratione voluptatibus laboriosam labore minima odit dolorum quisquam distinctio laudantium quam! Consectetur atque nesciunt veritatis vero in eius, natus aspernatur at fugit nihil enim perferendis inventore reprehenderit quibusdam, illo eos dolor totam numquam ab ducimus magni dolore repellat quasi voluptatibus. Numquam quibusdam vero, ut expedita debitis dolorum natus dignissimos magnam consequuntur earum quis unde obcaecati at ipsum eum fugit rerum, reiciendis quo. Nesciunt, cum eveniet odit quod voluptatum neque error ut dolores beatae dolorem iusto in sit sequi repellendus? Quis libero, quidem, hic perspiciatis corrupti suscipit assumenda veniam aliquid illum alias officiis accusantium deserunt voluptatum ad nobis dolor voluptate. Commodi ratione minus libero accusantium, architecto vitae asperiores totam error dignissimos aliquam, ea cupiditate corrupti voluptas eos dolores obcaecati a, consequatur sit eligendi quasi facere excepturi laboriosam. Molestiae.</p>
 </header>
 
 <main>
@@ -60,7 +65,7 @@ address {
 
 <details>
     <summary>Pss... Do you want to know a secret?</summary>
-    <p>
+    <p class="Maya">
         I'm in love with Maya
     </p>
 </details>
