--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="Some html tips and tricks for a beginer">
     <title>html test</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./style.css">
     <!--embedded stylesheet / вбудована таблиця стилів -->
         <style>
 address {
