--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ address {
 <img src="./img/frame.jpg" alt="The door frame" width="100" height="100" /><br>
 
 <button type="button">для интерактива</button><br>
+<p>Клікни тут! Кайфонєш!!!</p>
 <button type="submit">для форм</Button><br>
 
 </main>
