--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
     <title>html test</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <!--embedded stylesheet / вбудована таблиця стилів -->
-        <style>
-address {
-    background-color: greenyellow;
-}
-        </style>
-    <link rel="stylesheet" href="./style.css" />
+
 </head>
 
-<!--The color of the background-->
-<body bgcolor="lavender">
+<body>
 
 <header>
     <nav>
